--- a/src/app/PostComponent/post.component.html
+++ b/src/app/PostComponent/post.component.html
@@ -2,6 +2,8 @@
   <h1>Recenzie</h1>
 </div>
 
+<button routerLink="/">Go to Main Page</button>
+
 <!-- Create Post Box -->
 <div class="create-post-box">
   <input type="text" placeholder="Title" [(ngModel)]="newPost.title" />
