--- a/src/app/LogginComponent/login.component.scss
+++ b/src/app/LogginComponent/login.component.scss
@@ -37,3 +37,18 @@
   color: red;
   margin-top: 10px;
 }
+
+.close-button {
+  background: #fff;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 10px;
+  width: 100%;
+  padding: 10px;
+  color: #000;
+}
+
+.close-button:hover {
+  background-color: #f0f0f0;
+}
