--- a/src/app/MainComponent/main.component.scss
+++ b/src/app/MainComponent/main.component.scss
@@ -23,8 +23,8 @@
 
 .popup {
   position: fixed;
-  top: 80%;
-  right: 100%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
   padding: 20px;
@@ -38,15 +38,26 @@
   margin-top: 10px;
 }
 
-.popup-container {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+.close-button {
+  background: none;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
 }
 
-.right-middle {
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
+.error {
+  color: red;
+}
+
+.white-button {
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.white-button:hover {
+  background-color: #f0f0f0;
 }
