--- a/src/app/UserCreateComponent/userCreate.component.html
+++ b/src/app/UserCreateComponent/userCreate.component.html
@@ -1,20 +1,16 @@
-<div class="popupInUser">
-  <div class="close-button-container">
+<div class="popup">
+  <div class="login-box">
+    <h2>Register</h2>
+    <form (ngSubmit)="createUser()">
+      <input type="text" placeholder="Name" id="name" [(ngModel)]="user.name" name="name" required>
+      <input type="password" placeholder="Password" id="password" [(ngModel)]="password" name="password" required>
+      <input type="password" placeholder="Confirm Password" id="confirmPassword" [(ngModel)]="confirmPassword" name="confirmPassword" required>
+
+      <div *ngIf="!passwordsMatch" class="error-message">Passwords do not match!</div>
+      <div *ngIf="userExists" class="error-message">User already exists!</div>
+
+      <button type="submit" class="create-button">Create User</button>
+    </form>
     <button class="close-button" (click)="closePop()">Close</button>
   </div>
-  <form (ngSubmit)="createUser()">
-    <label for="name">Name:</label>
-    <input type="text" id="name" [(ngModel)]="user.name" name="name" required>
-
-    <label for="password">Password:</label>
-    <input type="password" id="password" [(ngModel)]="password" name="password" required>
-
-    <label for="confirmPassword">Confirm Password:</label>
-    <input type="password" id="confirmPassword" [(ngModel)]="confirmPassword" name="confirmPassword" required>
-
-    <div *ngIf="!passwordsMatch" class="error">Passwords do not match!</div>
-    <div *ngIf="userExists" class="error">User already exists!</div>
-
-    <button type="submit">Create User</button>
-  </form>
 </div>
