--- a/src/app/UserComponent/user.component.scss
+++ b/src/app/UserComponent/user.component.scss
@@ -1,3 +1,10 @@
+.top-right-buttons {
+  position: absolute;
+  top: 30px; // Revert to original position
+  right: 10px;
+  display: flex;
+  gap: 10px;
+}
 .user-box {
   display: flex;
   flex-direction: column;
@@ -56,4 +63,17 @@ button:disabled {
 button.active {
   background-color: red;
   color: white;
+}
+
+.white-button {
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.white-button:hover {
+  background-color: #f0f0f0;
 }
