--- a/src/app/PostComponent/post.component.html
+++ b/src/app/PostComponent/post.component.html
@@ -2,9 +2,14 @@
   <h1>Recenzie</h1>
 </div>
 
+<div class="top-right-buttons">
+  <button (click)="openLoginPopup()">Login</button>
+  <button class="white-button" (click)="openCreateUserPopup()">Register</button>
+</div>
+<app-current-user></app-current-user>
+
 <button routerLink="/">Go to Main Page</button>
 
-<!-- Create Post Box -->
 <div class="create-post-box">
   <input type="text" placeholder="Title" [(ngModel)]="newPost.title" />
   <textarea placeholder="Write your post..." [(ngModel)]="newPost.text"></textarea>
@@ -12,16 +17,14 @@
   <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
 </div>
 
-<!-- Post Boxes -->
 <div class="content-box">
   <div class="post-box" *ngFor="let post of posts">
     <div class="post-header">
       <h3>{{ post.title }}</h3>
-      <span>by {{ post.user.name || 'Unknown' }}</span>
+      <span>by {{ post.user?.name || 'Unknown' }}</span>
     </div>
     <p>{{ post.text }}</p>
 
-    <!-- Comments Section -->
     <select>
       <option value="" disabled selected>Comments</option>
       <option *ngFor="let comment of post.comments">
@@ -29,4 +32,14 @@
       </option>
     </select>
   </div>
+</div>
+
+<div *ngIf="showCreateUserPopup" class="popup">
+  <app-user-create (userCreated)="closeCreateUserPopup()" (closePopup)="closeCreateUserPopup()"></app-user-create>
+  <button (click)="closeCreateUserPopup()" class="close-button">Close</button>
+</div>
+
+<div *ngIf="showLoginPopup" class="popup">
+  <app-login (loginSuccess)="closeLoginPopup()"></app-login>
+  <button (click)="closeLoginPopup()" class="close-button">Close</button>
 </div>
