--- a/src/app/PostComponent/post.component.html
+++ b/src/app/PostComponent/post.component.html
@@ -6,6 +6,7 @@
   <button class="common-button" (click)="openLoginPopup()">Login</button>
   <button class="common-button" (click)="openCreateUserPopup()">Register</button>
 </div>
+
 <app-current-user></app-current-user>
 
 <button routerLink="/" class="common-button">Go to Main Page</button>
@@ -13,7 +14,7 @@
 <div class="create-post-box">
   <input type="text" placeholder="Title" [(ngModel)]="newPost.title" />
   <textarea placeholder="Write your post..." [(ngModel)]="newPost.text"></textarea>
-  <button (click)="createPost()">Post</button>
+  <button (click)="createOrUpdatePost()" class="post-button">{{ isEditing ? 'Save Changes' : 'Post' }}</button>
   <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
 </div>
 
@@ -25,13 +26,19 @@
     </div>
     <p>{{ post.text }}</p>
 
-    <select>
-      <option value="" disabled selected>Comments</option>
-      <option *ngFor="let comment of post.comments">
-        {{ comment.text }} - {{ comment.User?.name || 'Anonymous' }}
-      </option>
-    </select>
-    <button (click)="deletePost(post.id)" class="delete-button">Delete</button>
+    <div class="comments-section">
+      <div *ngFor="let comment of post.comments" (click)="selectComment(comment.id)" [class.selected]="comment.id === selectedCommentId">
+        <strong>{{ comment.user?.name || 'Anonymous' }}:</strong> {{ comment.text }}
+        <button *ngIf="comment.userId === getCurrentUserId()" (click)="deleteComment(comment.id)" class="delete-button post-button">Delete</button>
+      </div>
+      <textarea class="comment-textarea" placeholder="Write a comment..." [(ngModel)]="newComment.text"></textarea>
+      <button class="add-comment-button post-button" (click)="addComment(post.id)">Add Comment</button>
+    </div>
+
+    <div class="button-group">
+      <button (click)="editPost(post)" class="common-button post-button">Edit</button>
+      <button (click)="deletePost(post.id)" class="delete-button post-button">Delete</button>
+    </div>
   </div>
 </div>
 
