--- a/src/app/PostComponent/post.component.scss
+++ b/src/app/PostComponent/post.component.scss
@@ -50,7 +50,7 @@
   padding: 15px;
   margin-bottom: 15px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-  word-wrap: break-word; /* Ensure text wraps within the box */
+  word-wrap: break-word;
 }
 
 .post-header {
