--- a/src/app/MainComponent/main.component.scss
+++ b/src/app/MainComponent/main.component.scss
@@ -61,3 +61,29 @@
 .white-button:hover {
   background-color: #f0f0f0;
 }
+
+.common-button {
+  background-color: #007bff;
+  color: white;
+  border: 1px solid #0056b3;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.common-button:hover {
+  background-color: #0056b3;
+}
+
+.delete-button {
+  background-color: red;
+  color: white;
+  border: 1px solid darkred;
+  padding: 10px 20px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.delete-button:hover {
+  background-color: darkred;
+}
