--- a/src/app/UserComponent/user.component.scss
+++ b/src/app/UserComponent/user.component.scss
@@ -1,10 +1,11 @@
 .top-right-buttons {
   position: absolute;
-  top: 30px; // Revert to original position
+  top: 30px;
   right: 10px;
   display: flex;
   gap: 10px;
 }
+
 .user-box {
   display: flex;
   flex-direction: column;
@@ -31,6 +32,7 @@
   background-color: #f9f9f9;
   width: 50%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 
 .user-item {
@@ -76,4 +78,58 @@ button.active {
 
 .white-button:hover {
   background-color: #f0f0f0;
+}
+
+.common-button {
+  background-color: #007bff;
+  color: white;
+  border: 1px solid #0056b3;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.common-button:hover {
+  background-color: #0056b3;
+}
+
+.delete-button {
+  background-color: red;
+  color: white;
+  border: 1px solid darkred;
+  padding: 10px 20px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.delete-button:hover {
+  background-color: darkred;
+}
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.popup button {
+  margin-top: 10px;
+}
+
+.close-button {
+  background: none;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.error {
+  color: red;
 }
