FINAL UPDATE NA FE

--- a/src/app/MainComponent/main.component.html
+++ b/src/app/MainComponent/main.component.html
@@ -13,6 +13,8 @@
 
   <button routerLink="/user" class="common-button">Go to User</button>
 
+  <button routerLink="/issue" class="common-button">Go to Issues</button>
+
   <h2 class="centered-header">Aplikácia ešte nie je hotová</h2>
 
   <div *ngIf="showCreateUserPopup" class="popup">
