predbezny save keby somd aco pokazil

--- a/src/app/MainComponent/main.component.html
+++ b/src/app/MainComponent/main.component.html
@@ -11,6 +11,7 @@
   <button routerLink="/post" class="common-button">Go to Post</button>
   <button routerLink="/user" class="common-button">Go to User</button>
   <button routerLink="/issue" class="common-button">Go to Issues</button>
+  <button routerLink="/picture" class="common-button">Go to Images</button>
 
   <h2 class="centered-header">Aplikácia ešte nie je hotová</h2>
 
