--- a/src/app/PicturesComponent/picture.component.scss
+++ b/src/app/PicturesComponent/picture.component.scss
@@ -1,5 +1,3 @@
-/* filepath: /c:/Users/Maroo/VaiiFE/VaiiFrontEnd/src/app/PicturesComponent/picture.component.scss */
-
 .header {
   text-align: center;
   margin-bottom: 20px;
@@ -7,7 +5,7 @@
 
 .top-right-buttons {
   position: absolute;
-  top: 50px; /* Adjusted from 10px to 50px to move the buttons down */
+  top: 50px;
   right: 10px;
   display: flex;
   gap: 10px;
