--- a/src/app/PicturesComponent/picture.component.scss
+++ b/src/app/PicturesComponent/picture.component.scss
@@ -23,12 +23,13 @@
 
 .pictures-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .picture-item {
   margin: 10px;
+  text-align: center;
 }
 
 .picture-item img {
