--- a/src/app/PicturesComponent/picture.component.html
+++ b/src/app/PicturesComponent/picture.component.html
@@ -25,7 +25,9 @@
 </div>
 
 <ng-template #noPictures>
-  <p>No pictures found.</p>
+  <div class="no-pictures">
+    <p>No pictures found.</p>
+  </div>
 </ng-template>
 
 <div *ngIf="showCreateUserPopup" class="popup">
