--- a/src/app/CurrentUserComponent/currentUser.component.scss
+++ b/src/app/CurrentUserComponent/currentUser.component.scss
@@ -7,3 +7,16 @@
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+.current-user-box button {
+  background-color: blue;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.current-user-box button:hover {
+  background-color: darkblue;
+}
