--- a/src/app/PicturesComponent/picture.component.scss
+++ b/src/app/PicturesComponent/picture.component.scss
@@ -103,3 +103,11 @@
 .delete-button:hover {
   background-color: darkred;
 }
+
+.no-pictures {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  text-align: center;
+}
